# racecarr

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dev.md  docker-compose.yml  event-types.md  f1api-sample-response-year.json  f1api-sample-respose-year-round.json  indexer-nzbgeek-sample-titles.txt  screenshots.md  software-design-doc.md  testing.md
.github/workflows/: docker-publish.yml  sync-dockerhub-readme.yml
backend/: pyproject.toml  requirements.txt  upgrade_app_config.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py  logging_config.py
backend/app/models/: entities.py
backend/app/schemas/: common.py
backend/app/services/: app_config.py  auth.py  downloader_client.py  f1api.py  indexer_client.py  manual_downloads.py  notifications.py  scheduler.py
backend/tests/: conftest.py  test_health.py  test_notifications.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Logs.tsx  NotFound.tsx  Scheduler.tsx  Search.tsx  Settings.tsx
